--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,4 +11,5 @@ kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
 theme: jekyll-theme-tactile
+permalink: /:year/:month/:day/:title:output_ext
 
