--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,4 +12,5 @@ kramdown:
   syntax_highlighter: rouge
 theme: jekyll-theme-tactile
 permalink: /:year/:month/:day/:title:output_ext
+baseurl: /gh-pages-test
 
