--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,13 @@
+---
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
+      title: "this is site.title"
+      description: "this is site.description"
+---
 lsi: false
 safe: true
 source: docs
